# Saral_Samadhan_APP

./: .flutter-plugins-dependencies  .gitignore  ACTION_CHECKLIST.md  ANALYTICS_DASHBOARD_DESIGN.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  ANDROID_CONFIG_APPLIED.md  ATTENDANCE_SYSTEM_FIXED.md  AUDIT_TRAIL_DESIGN.md  AUDIT_TRAIL_IMPLEMENTATION.md  AUDIT_TRAIL_READY.md  CHECK_ATTENDANCE_RECORDS.dart  CLEAR_ATTENDANCE_BUTTON.dart  COMPOSITE_KEY_FIX.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT_COMPLETE.md  DEBUG_ATTENDANCE.dart  DEBUG_ATTENDANCE_ISSUE.md  DISABLE_RLS.sql  DOCUMENTATION_INDEX.md  EMBEDDING_SYSTEM_EXPLAINED.md  FINAL_IMPLEMENTATION.md  FINAL_RECOMMENDATIONS.md  FINAL_SETUP.sql  FINAL_SUMMARY.txt  FIX_RLS_POLICIES.sql  FIX_ROLL_NUMBERS.md  INTEGRATION_EXAMPLE.dart  MULTI_NGO_PLATFORM_DESIGN.md  MULTI_TEACHER_SETUP.md  PUBLISHING_GUIDE.md  QUICK_START_REMINDERS.md  REMINDER_FEATURE_SUMMARY.md  REMINDER_NOTIFICATION_FEATURE.md  REMINDER_SETUP_GUIDE.md  REMINDER_USER_GUIDE.md  RUN_THIS_NOW.sql  SETUP_AUDIT_TRAIL.sql  SETUP_SUMMARY.txt  SHARE_FEATURE_SUMMARY.md  SHARE_REPORTS_FEATURE.md  (+14 more)
.dart_tool/: package_config.json  package_graph.json
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/flutter_build/: dart_plugin_registrant.dart
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  face_align.cpp
android/app/src/main/cpp/include/: face_align.h
ios/Runner/: Info.plist
lib/: main.dart
lib/Native/: face_align_bindings.dart
lib/data/: subjects_topics.dart
lib/l10n/: app_en.arb  app_hi.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_hi.dart  app_localizations_mr.dart  app_mr.arb
lib/models/: reminder_settings.dart  sync_queue_item.dart
lib/pages/: account_details_page.dart  add_student_page.dart  analytics_dashboard_page.dart  attendance_analytics_page.dart  attendance_history_page.dart  attendance_options_page.dart  audit_log_page.dart  center_selection_page.dart  change_password_page.dart  class_scheduler_page.dart  edit_student_page.dart  edit_volunteer_report_page.dart  events_activities_page.dart  exported_reports_page.dart  image_cropper_page.dart  language_selection_page.dart  login_page.dart  main_dashboard_page.dart  notification_center_page.dart  photo_gallery_page.dart  reminder_settings_page.dart  signup_page.dart  splash_screen.dart  student_detailed_report_page.dart  student_profile_analytics_page.dart  student_report_page.dart  sync_queue_debug_page.dart  take_attendance_page.dart  view_attendance_page.dart  (+4 more)
(+64 files in other folders)
